# dkml-install-api

./: .buildinfo  .bumpversion.prerelease.cfg  .bumpversion.release.cfg  .gitattributes  .gitignore  CHANGES.md  CROSSPLATFORM-TODO.md  DEVELOPING.md  DEVELOPMENT.md  README.md  dkml-component-xx-console.opam  dkml-install-api.opam  dkml-install-installer.opam  dkml-install-runner.opam  dkml-install-runner.opam.template  dkml-install.opam  dkml-package-console.opam  dkml-package-console.opam.template  dkml-package-textarchive.opam  dkml-package-textarchive.opam.template  dune  dune-project  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/workflows/: dkml.yml  initiate-external-tests.yml  main.yml  pages.yml
_sources/: index.rst.txt
_sources/doc/: Design.rst.txt
_sources/doc/components/: WritingComponents.rst.txt
api/: dkml_install_api.ml  dkml_install_api.mli  dkml_install_api_intf.ml  dune  forward_progress.ml  forward_progress.mli  index.mld  log_config.ml  types.ml
ci/: build-test.sh
contributors/: .gitignore  Makefile  README.md  conf.py  dune  environment-ci.yml  environment.yml  fast-setup.ps1  index.rst  os-darwin.mk  os-linux.mk  os-windows.mk  release.sh  sync-workspace.ps1  sync-workspace.sh
contributors/doc/: Design.rst  StandardComponents.rst
contributors/doc/components/: StandardComponents.rst  WritingComponents.rst  index.rst
doc/: Design.html  StandardComponents.html
doc/components/: StandardComponents.html  WritingComponents.html  index.html
installer/common-generator/: common_installer_generator.ml  common_installer_generator.mli
installer/dune-generator/: common_main.ml  dune  dune_sexp.ml  main.ml  package_main.ml
installer/ml-generator/: common_main.ml  dune  main.ml  package_main.ml
installer/ml-generator/code/: README.md  create_installers.ml  discover.ml  dune  entry_assembly_manifest.ml  entry_install.ml  entry_uninstall.ml  package_setup.ml  package_uninstaller.ml  private_common.ml  runner_admin.ml  runner_user.ml
lib/: dkml_install_api.ml  dkml_install_api.mli  dune  index.mld  registry.ml  registry.mli  registry_intf.ml  types.ml  validate.ml
odoc/: index.html
odoc/dkml-component-xx-console/: index.html
odoc/dkml-install/: index.html
odoc/dkml-install-api/: index.html
odoc/dkml-install-api/Dkml_install_api/: index.html
odoc/dkml-install-api/Dkml_install_api__/: index.html
odoc/dkml-install-api/Dkml_install_api__Registry/: index.html
odoc/dkml-install-api/Dkml_install_api__Registry_intf/: index.html
odoc/dkml-install-api/Dkml_install_api__Types/: index.html
odoc/dkml-install-api/Dkml_install_api__Validate/: index.html
odoc/dkml-install-installer/: index.html
odoc/dkml-install-runner/: index.html
odoc/dkml-install-runner/Dkml_install_runner/: index.html
odoc/dkml-install-runner/Dkml_install_runner_admin/: index.html
odoc/dkml-install-runner/Dkml_install_runner_sites/: index.html
odoc/dkml-install-runner/Dkml_install_runner_user/: index.html
odoc/dkml-install-runner/Runner/: index.html
odoc/dkml-install/Dkml_install_api/: index.html
odoc/dkml-install/Dkml_install_api__/: index.html
odoc/dkml-install/Dkml_install_api__Types/: index.html
odoc/dkml-install/Dkml_install_register/: index.html
odoc/dkml-install/Dkml_install_register__/: index.html
odoc/dkml-install/Dkml_install_register__Registry/: index.html
odoc/dkml-install/Dkml_install_register__Registry_intf/: index.html
odoc/dkml-install/Dkml_install_register__Validate/: index.html
odoc/dkml-package-console/: index.html
odoc/dkml-package-console/Dkml_package_console_common/: index.html
odoc/dkml-package-console/Dkml_package_console_create/: index.html
odoc/dkml-package-console/Dkml_package_console_entry/: index.html
odoc/dkml-package-console/Dkml_package_console_setup/: index.html
odoc/dkml-package-console/Dkml_package_console_uninstaller/: index.html
odoc/dkml-package-textarchive/: index.html
package/console/common/: author_types.ml  dkml_package_console_common.ml  dkml_package_console_common.mli  dune  error_utils.ml  error_utils.mli  spawn.ml  spawn.mli  windows_registry.ml
package/console/create/: dkml_package_console_create.ml  dkml_package_console_create.mli  dune  installer_archive.ml  installer_sfx.ml  populate_archive.ml
package/console/create/assets/scripts/: bundle.sh
package/console/create/test/: dune  entry_print_salut.ml  runner_user_print_zoo.ml  test_windows_create_installers.ml  test_windows_create_installers.t  uninstaller_print_bye.ml
package/console/entry/: dkml_package_console_entry.ml  dkml_package_console_entry.mli  dune  main.ml
package/console/entry/cfg/: dune
package/console/setup/: create_installers.ml  dkml_package_console_setup.ml  dkml_package_console_setup.mli  dune  error_utils.ml  installer_archive.ml  installer_sfx.ml  populate_archive.ml  windows_uninstall_registry.ml
package/console/setup-proxy/: dune  main.ml
package/console/setup-proxy/cfg/: README.md  discover.ml  dune  print_assembly_manifest.ml
package/console/setup/assets/manifests/: setup.exe.manifest
package/console/setup/scripts/: bundle.sh
package/console/setup/test/: dune  setup_print_hello.ml  setup_proxy_yoda.ml  test_windows_create_installers.ml  test_windows_create_installers.t  uninstaller_print_bye.ml
package/console/uninstaller/: dkml_package_console_uninstaller.ml  dune  (+1 more)
register/: dkml_install_register.ml  dkml_install_register.mli  dune  register_types.ml  registry.ml  registry.mli  registry_intf.ml  validate.ml
runner/: dune  main.ml
runner/sites/: dkml_install_runner_sites.ml  dune
runner/src/: cmdliner_common.ml  cmdliner_runner.ml  component_utils.ml  dkml_install_runner.ml  dune  error_handling.ml  host_abi.ml  host_abi.mli  ocaml_abi.ml  ocaml_abi.mli  os_utils.ml  path_eval.ml  path_eval.mli  path_location.ml  runner.ml
runner/src/tests/: dune  test_path_eval.ml
runner/textarchive/src/: dune  textarchive_common.ml
test/: dune  more_testables.ml  test_dkml_install_api.ml  test_registry.ml  test_uninstall.ml  test_validate.ml  validate.ml
(+52 files in other folders)
