opam-version: "2.0"
version: "0.1.0"
synopsis:
  "Internal component used by dkml-package-console"
description:
  "Executables for launching console based installers"
maintainer: ["opensource+diskuv-ocaml@support.diskuv.com"]
authors: ["Diskuv, Inc. <opensource+diskuv-ocaml@support.diskuv.com>"]
license: "Apache-2.0"
homepage: "https://github.com/diskuv/dkml-install-api"
bug-reports: "https://github.com/diskuv/dkml-install-api/issues"
dev-repo: "git+https://github.com/diskuv/dkml-install-api.git"
name: "dkml-component-xx-console"
install: [
  ["install" "-d"
    "%{_:share}%/staging-files/windows_x86/bin"
    "%{_:share}%/staging-files/windows_x86_64/bin"]

  # gsudo
  [
    "unzip" "-o" "-d" "%{_:share}%/staging-files/windows_x86/bin"
    "dl/gsudo.v1.2.0.zip"
    "gsudo.exe"
  ]
  [
    "unzip" "-o" "-d" "%{_:share}%/staging-files/windows_x86_64/bin"
    "dl/gsudo.v1.2.0.zip"
    "gsudo.exe"
  ]
]
extra-source "dl/gsudo.v1.2.0.zip" {
  src: "https://github.com/gerardog/gsudo/releases/download/v1.2.0/gsudo.v1.2.0.zip"
  checksum: [
    "sha256=57c90d138200214a4f662925175d451f41c208f7960ed2c1652561eaa9e7c15c"
  ]
}
