opam-version: "2.0"
name: "dkml-install-installer"
version: "0.1.0"
synopsis: "Build tools for DKML installers"
description:
  "Build-time executables that can generate Dune include files which will compile essential end-user executables."
maintainer: ["opensource+diskuv-ocaml@support.diskuv.com"]
authors: ["Diskuv, Inc. <opensource+diskuv-ocaml@support.diskuv.com>"]
license: "Apache-2.0"
homepage: "https://github.com/diskuv/dkml-install-api"
bug-reports: "https://github.com/diskuv/dkml-install-api/issues"
depends: [
  "alcotest" {>= "1.4.0" & with-test}
  "odoc" {>= "1.5.3" & with-doc}
  "dkml-install" {= version}
  "dkml-install-runner" {= version}
  "dune" {>= "2.9"}
  "astring" {>= "0.8.5"}
  "bos" {>= "0.2.0"}
  "cmdliner" {= "1.0.4"}
  "fmt" {>= "0.8.9"}
  "logs" {>= "0.7.0"}
]
dev-repo: "git+https://github.com/diskuv/dkml-install-api.git"
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
