opam-version: "2.0"
version: "0.4.0"
synopsis: "API and registry for Diskuv OCaml (DKML) installation components"
description:
  "All DKML installation components implement the interfaces exposed in this API."
maintainer: ["opensource+diskuv-ocaml@support.diskuv.com"]
authors: ["Diskuv, Inc. <opensource+diskuv-ocaml@support.diskuv.com>"]
license: "Apache-2.0"
homepage: "https://github.com/diskuv/dkml-install-api"
bug-reports: "https://github.com/diskuv/dkml-install-api/issues"
#   Components can be assembled on any "host" build machine defined in
#   https://github.com/diskuv/dkml-install-api/blob/5cfd7b57c79d990c76a9bdc8f8f0fa9f6fd5346f/runner/src/host_abi.ml
#   into a installer that will run on any end-user machine defined in
#   https://github.com/diskuv/dkml-install-api/blob/5cfd7b57c79d990c76a9bdc8f8f0fa9f6fd5346f/runner/src/ocaml_abi.ml
available: os = "win32" | os = "linux" | os = "macos"
depends: [
  "ocaml" {>= "4.08.0"}
  "alcotest" {>= "1.4.0" & with-test}
  "odoc" {>= "1.5.3" & with-doc}
  "dune" {>= "2.9"}
  "ppx_deriving" {>= "5.2.1"}
  "result" {>= "1.5"}
  "astring" {>= "0.8.5"}
  "bos" {>= "0.2.0"}
  "cmdliner" {>= "1.1.1"}
  "fmt" {>= "0.8.9"}
  "tsort" {>= "2.1.0"}
  "diskuvbox" {>= "0.1.1" & with-test}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
dev-repo: "git+https://github.com/diskuv/dkml-install-api.git"
