opam-version: "2.0"
version: "0.2.0"
synopsis:
  "Console setup and uninstall executables for Diskuv OCaml (DKML) installation"
description:
  "The setup and uninstall executables are responsible for launching the DKML runners."
maintainer: ["opensource+diskuv-ocaml@support.diskuv.com"]
authors: ["Diskuv, Inc. <opensource+diskuv-ocaml@support.diskuv.com>"]
license: "Apache-2.0"
homepage: "https://github.com/diskuv/dkml-install-api"
bug-reports: "https://github.com/diskuv/dkml-install-api/issues"
#   Components can be assembled on any "host" build machine defined in
#   https://github.com/diskuv/dkml-install-api/blob/5cfd7b57c79d990c76a9bdc8f8f0fa9f6fd5346f/runner/src/host_abi.ml
#   into a installer that will run on any end-user machine defined in
#   https://github.com/diskuv/dkml-install-api/blob/5cfd7b57c79d990c76a9bdc8f8f0fa9f6fd5346f/runner/src/ocaml_abi.ml
available: os = "win32" | os = "linux" | os = "macos"
depends: [
  "alcotest" {>= "1.4.0" & with-test}
  "odoc" {>= "1.5.3" & with-doc}
  "dkml-install" {= version}
  "dkml-install-runner" {= version}
  "dune" {>= "2.9"}
  "diskuvbox" {>= "0.1.0"}
  "crunch" {>= "3.2.0"}
  "dkml-component-xx-console" {>= "0.1.1"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
dev-repo: "git+https://github.com/diskuv/dkml-install-api.git"
name: "dkml-package-console"
