(tests
 (package dkml-install)
 (names test_dkml_install_api test_validate test_registry test_uninstall)
 (modules test_dkml_install_api test_validate test_registry test_uninstall)
 (libraries
  dkml-install.api
  dkml-install.register
  alcotest
  more_testables
  diskuvbox))

(library
 (name more_testables)
 (modules more_testables)
 (libraries astring alcotest dkml-install.api))
