(library
 (name dkml_install_runner)
 (public_name dkml-install-runner)
 (libraries
  dkml-install.register
  dkml-install.api
  diskuvbox
  bos
  astring
  fpath
  logs.fmt
  logs.cli
  fmt.cli
  fmt.tty)
 (preprocess
  (pps
   ; Do not use `ppx_expect` since it drags in unnecessary stublibs DLLs
   ppx_deriving.show)))
