(library
 (name dkml_install_runner)
 (public_name dkml-install-runner)
 (libraries
  dkml-install.register
  dkml-install.api
  diskuvbox
  bos
  astring
  fmt
  fpath
  logs.fmt
  logs.cli
  fmt.cli
  fmt.tty
  str)
 (preprocess
  (pps
   ; Do not use `ppx_expect` since it drags in unnecessary stublibs DLLs
   ppx_deriving.show)))
