(executables
 (names
  test_windows_create_installers
  runner_admin_print_hi
  runner_user_print_zoo
  setup_proxy_yoda
  setup_print_hello
  uninstaller_print_bye)
 (libraries dkml-package-console.create))

(cram
 (enabled_if
  (= %{os_type} Win32))
 (deps
  ./test_windows_create_installers.ml
  ./test_windows_create_installers.exe
  ./runner_admin_print_hi.exe
  ./runner_user_print_zoo.exe
  ./setup_proxy_yoda.exe
  ./setup_proxy_yoda.ml
  ./setup_print_hello.exe
  ./setup_print_hello.ml
  ./uninstaller_print_bye.exe
  ./uninstaller_print_bye.ml
  ../assets/lzma2107/bin/7zr.exe))
