(executable
 (name discover)
 (libraries dune.configurator bos fpath)
 (modules discover))

(rule
 (targets console-link-flags.sexp)
 (deps
  (:discover discover.exe)
  application.manifest
  assembly.manifest)
 (action
  (run %{discover})))

(executable
 (name print_assembly_manifest)
 (modules print_assembly_manifest)
 (libraries fmt semver2))

(rule
 (target assembly.manifest)
 (action
  (with-stdout-to
   %{target}
   (run %{exe:print_assembly_manifest.exe}))))
