(executables
 (names
  test_windows_create_installers
  setup_print_hello
  uninstaller_print_bye)
 (libraries dkml-package-console.setup))

(cram
 (enabled_if
  (= %{os_type} Win32))
 (deps
  ./test_windows_create_installers.ml
  ./test_windows_create_installers.exe
  ./setup_print_hello.exe
  ./setup_print_hello.ml
  ./uninstaller_print_bye.exe
  ../assets/lzma2107/bin/7zr.exe))
